# Course-project

./: LICENSE  README.md
Android-application/: README.md
Android-application/app/: build.gradle
Coflow-CDF/: CDF.py  facebook-CDF.py  opencloud-CDF.py
Explore-Arduino/: README.md  lab1-1.ino  lab1-11-master.ino  lab1-11-slave.ino  lab1-2.ino  lab1-3.ino  lab1-4.ino  lab1-5.ino  lab1-7.ino  lab1-8.ino  lab1-9.ino
FPGA-Clock/: README.md  clock.v  clock_divider.v  counter.v  ctrl_display_stop.v  deBounce.v  sevenseg.v  sevenseg_display.v
FPGA-pipe-computer/: README.md  alu.v  count_ones.v  cu.v  datamem.v  io_input_reg.v  io_output_reg.v  lpm_ram_dq_dram.v  mux2x32.v  mux4x32.v  pc.v  pipecomputer.v  pipedereg.v  pipeemreg.v  pipeexe.v  pipeid.v  pipeidfw.v  pipeif.v  pipeir.v  pipemem.v  pipemwreg.v  pipepc.v  ports.v  regfile.v  sevenseg.v
Lidar-flow-detection/: CMakeLists.txt  README.md  calculator.cpp  main.cpp  pcd_project.h  viewer.cpp
OCR-shipping-container/: README.md  demo.m
OCR-shipping-container/crnn.pytorch/: demo.py
OCR-shipping-container/data/: ground_truth.csv
OCR-shipping-container/model/: bic-names.mat  deploy.prototxt  mean.csv  mean_0.csv  mean_1.csv  mean_2.csv
OCR-shipping-container/src/: combine_fine_coarse.m  get_caffe_score.m  get_coarse_result.m  get_fine_result.m  initialize_fine_grained.m  split_digits_MSER.m  split_digits_histogram.m  string_preprocessing.m  test_all.m  test_baseline.m
OCR-shipping-container/util/: EditDist.m  read_npy.py  (+4 more)
QRDetector/: Decoder.py  QRDetector.py  README.md  Util.py  __init__.py  main.py
(+27 files in other folders)
